# pycurvature

./: .gitignore  README.md  dev_requirements.in  dev_requirements.txt  pyproject.toml  requirements.txt
pycurvature/: __init__.py  curvature.py
tests/pycurvature/: test_curvature.py
